--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -15,6 +15,9 @@
                 </li>
                 
                 <li class="dropdown">
+                    <a href="/media"><span class="glyphicon glyphicon-cog"></span> Média</a>
+                </li>
+              <li class="dropdown">
                     <a href="/fibo"><span class="glyphicon glyphicon-cog"></span> Sequência de Fibonacci</a>
                 </li>
             </ul>
